//
//  Constants.swift
//  MovieQuiz
//
//  Created by Максим Лозебной on 06.04.2026.
//
import Foundation

enum Constants {
    enum AccessibilityIdentifier {
        static let imageView: String = "Poster"
        static let counterLabel: String = "Index"
        static let yesButtonOutlets: String = "Yes"
        static let noButtonOutlets: String = "No"
        static let gameResultAlert: String = "GameResultsAlert"
    }
    
    enum CornerRadius {
        static let radius16: CGFloat = 16
        static let radius20: CGFloat = 20
    }
    
    enum Sizes {
        static let size8: CGFloat = 8
    }
}
